re PR other/36498 (time/memory hog for large c++ source.)

2008-06-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36498
	* tree-flow-inline.h (var_can_have_subvars): Unions cannot
	have subvars.

From-SVN: r136744